Fixed Text Alignment in Search Form

--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -53,6 +53,7 @@
   margin: 1em;
   justify-content: left;
   align-content: flex-start;
+  text-align: left;
 }
 
 .labelStyle {
